# minicode

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _verify_expectations.py  array_utils.py  dict_utils.py  pyproject.toml  test_array_utils.py  test_dict_utils.py  test_s01.py  test_s03.py  test_s05.py  test_shapes.py
.github/workflows/: ci.yml
benchmark/: results_full.json  run_benchmark.py  run_e2e.py  run_security_e2e.py  run_simple.py  test_complex.py
benchmark/tasks/: security_e2e.json
docs/: agent_loop_lite_框架.md  agent_loop_turn_kernel_联合架构图.md  memory_学习框架.md  session_学习框架.md  turn_kernel_框架.md  学习路线图.md  安全审查评测报告.md  审查系统最终改造方案.md  技术点文件映射.md  改动清单.md  文件清单.md  最终总报告.md  最终架构框架图.md  核心类统计.md  端到端评测完整版.md  端到端评测报告.md  端到端评测简单版.md  系统测试报告.md  记忆系统完整分析.md  面试题全集.md  项目全方位总结.md  项目架构总结.md  项目简历描述.md
fibonacci_algorithms/: __init__.py  level1_iterative.py  level2_fast_doubling.py  level3_matrix.py
fizzbuzz_algorithms/: __init__.py  level1_basic.py  level2_custom.py  level3_advanced.py
minicode/: __init__.py  __main__.py  agent_intelligence.py  agent_loop.py  agent_loop_lite.py  agent_metrics.py  anthropic_adapter.py  api_retry.py  auto_mode.py  background_tasks.py  capability_registry.py  circuit_breaker.py  cli_commands.py  config.py  context_compactor.py  context_manager.py  cost_tracker.py  decision_audit.py  file_review.py  headless.py  history.py  hooks.py  install.py  intent_parser.py  layered_context.py  local_tool_shortcuts.py  logging_config.py  loop_orchestrator.py  main.py  manage_cli.py  mcp.py  memory.py  micro_compact.py  mock_model.py  model_caller.py  model_registry.py  model_switcher.py  openai_adapter.py  permissions.py  product_surfaces.py  (+17 more)
minicode/review/: hooks.py  memory.py  mode_engine.py  promotion.py
minicode/tools/: __init__.py  ask_user.py  batch_ops.py  code_nav.py  code_review.py  diff_viewer.py  edit_file.py  file_tree.py  git.py  grep_files.py  import_map.py  list_files.py  load_skill.py  patch_file.py  read_file.py  run_command.py  sandbox_test.py  task.py  test_runner.py  todo_write.py  web_fetch.py  web_search.py  write_file.py
minicode/tui/: __init__.py  chrome.py  event_flow.py  input.py  input_handler.py  input_parser.py  markdown.py  navigation.py  renderer.py  runtime_control.py  screen.py  session_flow.py  state.py  theme.py  tool_helpers.py  tool_lifecycle.py  transcript.py  types.py  ui_hints.py
palindrome_algorithms/: __init__.py  level1_simple.py  level2_two_pointer.py  level3_manacher.py
reverse_string_algorithms/: __init__.py  level1_slice.py  level2_two_pointer.py  level3_recursive.py  level4_join.py
search_algorithms/: __init__.py  level1_linear.py  level2_binary.py  level3_jump.py
string_comparison_algorithms/: __init__.py  level1_basic.py  level2_levenshtein.py  level3_kmp.py
string_encoding_algorithms/: __init__.py  level1_caesar.py  level2_rle.py  level3_base64.py  level4_huffman.py
tests/: test_agent_flow.py  test_agent_loop.py  test_anthropic_adapter.py  test_circuit_breaker.py  test_cli_commands.py  test_config.py  test_context_compactor.py  test_fibonacci_algorithms.py  test_fizzbuzz.py  test_fizzbuzz_py.py  test_frequency.py  test_headless.py  test_helpers.py  test_hooks.py  test_integration.py  test_logging_hardening.py  test_main.py  test_mcp.py  test_memory_e2e.py  test_memory_integration.py  test_model_switching.py  test_openai_adapter.py  test_palindrome_algorithms.py  test_product_surfaces.py  test_prompt.py  test_reverse_string_algorithms.py  test_run_command_encoding.py  test_search_algorithms.py  test_session.py  test_string_comparison_algorithms.py  test_tools.py  test_tty_app.py  test_tui.py  test_turn_kernel.py
web/: index.html  server.py
