[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcode-agent"
version = "0.2.0"
description = "SmartCode — AI coding agent with two-tier review, Docker sandbox testing, and memory system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SmartCode Contributors"},
]
keywords = ["ai", "coding-agent", "code-review", "docker", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jiangkang11134/SmartCode"
Repository = "https://github.com/jiangkang11134/SmartCode"
Documentation = "https://github.com/jiangkang11134/SmartCode"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]
web = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
smartcode = "minicode.main:main"
smartcode-headless = "minicode.headless:main"
minicode-py = "minicode.main:main"
minicode-headless = "minicode.headless:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
]
ignore = [
    "E402",   # allow module-level imports (lazy init pattern)
    "E501",   # line too long
    "E731",   # allow lambda assignments
    "F401",   # allow unused imports (re-exports)
    "F821",   # allow undefined names (commented-code pattern)
    "F823",   # allow undefined local (commented-code pattern)
    "F841",   # allow unused variables (commented-code pattern)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
exclude = [
    "build/",
    "benchmark/results",
]
